--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www",
     "test": "node_modules/.bin/mocha tests/index.js",
     "coverage": "`npm bin`/istanbul cover node_modules/.bin/_mocha tests/index.js",
-    "coveralls": "npm run-script coverage && node bin/coveralls.js < coverage/lcov.info"
+    "coveralls": "npm run-script coverage && node node_modules/.bin/coveralls < coverage/lcov.info"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
