--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "node_modules/.bin/mocha tests/index.js",
-    "coverage": "`npm bin`/istanbul cover node_modules/.bin/_mocha tests/index.js",
+    "test": "node_modules/.bin/mocha",
+    "coverage": "`npm bin`/istanbul cover node_modules/.bin/_mocha",
     "coveralls": "npm run-script coverage && node node_modules/.bin/coveralls < coverage/lcov.info"
   },
   "dependencies": {
